[package]
name = "rusq"
version = "0.1.0"
authors = ["max <me@mclifford.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial = "0.4.0"
rusqlite = { version = "0.24.2", features = ["blob"] }
rust-crypto = "0.2.36"
chrono = "0.4.19"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
uuid = { version = "0.8", features = ["serde", "v4"] }
rlog = { git = "https://github.com/mc738/rlog.git" }